--- a/devops/infrastructure/github-action-playbook.yml
+++ b/devops/infrastructure/github-action-playbook.yml
@@ -1,5 +1,5 @@
 ---
-# Testing github actions with ansible playnook
+# Setup joystream code, build and Create AMI
 
 - name: Setup instance
   hosts: all
@@ -10,10 +10,10 @@
         name: common
         tasks_from: get-code-git
 
-    # - name: Run setup and build
-    #   include_role:
-    #     name: common
-    #     tasks_from: run-setup-build
+    - name: Run setup and build
+      include_role:
+        name: common
+        tasks_from: run-setup-build
 
     - name: Basic AMI Creation
       amazon.aws.ec2_ami:
@@ -27,12 +27,12 @@
       register: ami_data
       delegate_to: localhost
 
-    - name: Print AMI ID
-      debug:
-        msg: "AMI ID is: {{ ami_data.image_id }}"
-
     - name: Delete the stack
       amazon.aws.cloudformation:
         stack_name: "{{ stack_name }}"
         state: "absent"
       delegate_to: localhost
+
+    - name: Print AMI ID
+      debug:
+        msg: "AMI ID is: {{ ami_data.image_id }}"
