Add current branch to test

--- a/.github/workflows/create-ami.yml
+++ b/.github/workflows/create-ami.yml
@@ -3,9 +3,9 @@ name: Build code and create AMI
 on:
   push:
     branches:
-      - master
       - olympia
       - test_branch
+      - create-ami-github-action-1
 
 jobs:
   build:
@@ -61,3 +61,4 @@ jobs:
           --extra-vars "git_repo=https://github.com/${{ github.repository }} \
                         branch_name=${{ steps.extract_branch.outputs.branch }} instance_id=${{ steps.deploy_stack.outputs.InstanceId }}
                         stack_name=${{ env.STACK_NAME }} ami_name=${{ env.ami_name }}"
+          --verbose
