--- a/devops/infrastructure/roles/common/tasks/run-setup-build.yml
+++ b/devops/infrastructure/roles/common/tasks/run-setup-build.yml
@@ -4,6 +4,12 @@
 - name: Creat bash profile file
   command: "touch /home/ubuntu/.bash_profile"
 
+- name: Copy bash_profile content to bashrc for non-interactive sessions
+  blockinfile:
+    block: "{{ bash_data.stdout }}"
+    path: ~/.bashrc
+    insertbefore: BOF
+
 - name: Run setup script
   command: ./setup.sh
   args:
