--- a/.github/workflows/joystream-node-docker.yml
+++ b/.github/workflows/joystream-node-docker.yml
@@ -1,6 +1,9 @@
 name: joystream-node-docker
 
-on: push
+on:
+  push:
+    branches:
+      - docker-build-mytest
 
 env:
   REPOSITORY: joystream/node
@@ -20,6 +23,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - id: compute_shasum
         name: Compute runtime code shasum
@@ -44,107 +53,107 @@ jobs:
         with:
           context: .
           file: joystream-node.Dockerfile
-          platforms: linux/amd64
+          platforms: linux/arm/v7
           push: true
-          tags: ${{ env.REPOSITORY }}:${{ steps.compute_shasum.outputs.shasum }}-amd64
-        if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
+          tags: ${{ env.REPOSITORY }}:${{ steps.compute_shasum.outputs.shasum }}-armv7
+        # if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
 
-  push-arm64:
-    name: Build joystream/node Docker image for arm64
-    runs-on: ubuntu-latest
-    env:
-      STACK_NAME: joystream-ga-docker-${{ github.run_number }}
-    steps:
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+  # push-arm64:
+  #   name: Build joystream/node Docker image for arm64
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     STACK_NAME: joystream-ga-docker-${{ github.run_number }}
+  #   steps:
+  #     - name: Extract branch name
+  #       shell: bash
+  #       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+  #       id: extract_branch
 
-      - name: Checkout
-        uses: actions/checkout@v2
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '14.x'
+  #     - uses: actions/setup-node@v1
+  #       with:
+  #         node-version: '14.x'
 
-      - name: Install Ansible dependencies
-        run: pipx inject ansible-core boto3 botocore
+  #     - name: Install Ansible dependencies
+  #       run: pipx inject ansible-core boto3 botocore
 
-      - id: compute_shasum
-        name: Compute runtime code shasum
-        run: |
-          export RUNTIME_CODE_SHASUM=`scripts/runtime-code-shasum.sh`
-          echo "::set-output name=shasum::${RUNTIME_CODE_SHASUM}"
+  #     - id: compute_shasum
+  #       name: Compute runtime code shasum
+  #       run: |
+  #         export RUNTIME_CODE_SHASUM=`scripts/runtime-code-shasum.sh`
+  #         echo "::set-output name=shasum::${RUNTIME_CODE_SHASUM}"
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Check if we have pre-built image on Dockerhub
-        # Will output 0 if image exists and 1 if does not exists
-        run: |
-          export IMAGE_EXISTS=$(docker manifest inspect ${{ env.REPOSITORY }}:${{ steps.compute_shasum.outputs.shasum }} > /dev/null ; echo $?)
-          echo "::set-output name=image_exists::${IMAGE_EXISTS}"
+  #     - name: Check if we have pre-built image on Dockerhub
+  #       # Will output 0 if image exists and 1 if does not exists
+  #       run: |
+  #         export IMAGE_EXISTS=$(docker manifest inspect ${{ env.REPOSITORY }}:${{ steps.compute_shasum.outputs.shasum }} > /dev/null ; echo $?)
+  #         echo "::set-output name=image_exists::${IMAGE_EXISTS}"
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-        if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: us-east-1
+  #       if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
 
-      - name: Deploy to AWS CloudFormation
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        id: deploy_stack
-        with:
-          name: ${{ env.STACK_NAME }}
-          template: devops/infrastructure/single-instance-docker.yml
-          no-fail-on-empty-changeset: '1'
-          parameter-overrides: 'KeyName=${{ env.KEY_NAME }},EC2AMI=ami-00d1ab6b335f217cf,EC2InstanceType=t4g.xlarge'
-        if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
+  #     - name: Deploy to AWS CloudFormation
+  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
+  #       id: deploy_stack
+  #       with:
+  #         name: ${{ env.STACK_NAME }}
+  #         template: devops/infrastructure/single-instance-docker.yml
+  #         no-fail-on-empty-changeset: '1'
+  #         parameter-overrides: 'KeyName=${{ env.KEY_NAME }},EC2AMI=ami-00d1ab6b335f217cf,EC2InstanceType=t4g.xlarge'
+  #       if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
 
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: build-arm64-playbook.yml
-          directory: devops/infrastructure
-          requirements: requirements.yml
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          inventory: |
-            [all]
-            ${{ steps.deploy_stack.outputs.PublicIp }}
-          options: |
-            --extra-vars "git_repo=https://github.com/${{ github.repository }} \
-                          branch_name=${{ steps.extract_branch.outputs.branch }} \
-                          docker_username=${{ secrets.DOCKERHUB_USERNAME }} \
-                          docker_password=${{ secrets.DOCKERHUB_PASSWORD }} \
-                          tag_name=${{ steps.compute_shasum.outputs.shasum }} repository=${{ env.REPOSITORY }} \
-                          stack_name=${{ env.STACK_NAME }}"
-        if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
+  #     - name: Run playbook
+  #       uses: dawidd6/action-ansible-playbook@v2
+  #       with:
+  #         playbook: build-arm64-playbook.yml
+  #         directory: devops/infrastructure
+  #         requirements: requirements.yml
+  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #         inventory: |
+  #           [all]
+  #           ${{ steps.deploy_stack.outputs.PublicIp }}
+  #         options: |
+  #           --extra-vars "git_repo=https://github.com/${{ github.repository }} \
+  #                         branch_name=${{ steps.extract_branch.outputs.branch }} \
+  #                         docker_username=${{ secrets.DOCKERHUB_USERNAME }} \
+  #                         docker_password=${{ secrets.DOCKERHUB_PASSWORD }} \
+  #                         tag_name=${{ steps.compute_shasum.outputs.shasum }} repository=${{ env.REPOSITORY }} \
+  #                         stack_name=${{ env.STACK_NAME }}"
+  #       if: ${{ steps.compute_shasum.outputs.image_exists == 1 }}
 
-  push-manifest:
-    name: Create manifest using both the arch images
-    if: ${{ needs.push-amd64.outputs.image_exists == 1 }}
-    needs: [push-amd64, push-arm64]
-    runs-on: ubuntu-latest
-    env:
-      TAG_SHASUM: ${{ needs.push-amd64.outputs.tag_shasum }}
-    steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  # push-manifest:
+  #   name: Create manifest using both the arch images
+  #   if: ${{ needs.push-amd64.outputs.image_exists == 1 }}
+  #   needs: [push-amd64, push-arm64]
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     TAG_SHASUM: ${{ needs.push-amd64.outputs.tag_shasum }}
+  #   steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Create manifest for multi-arch images
-        run: |
-          # get artifacts from previous steps
-          docker pull ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64
-          docker pull ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64
-          docker manifest create ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64 ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64
-          docker manifest annotate ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64 --arch amd64
-          docker manifest annotate ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64 --arch arm64
-          docker manifest push ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}
+  #     - name: Create manifest for multi-arch images
+  #       run: |
+  #         # get artifacts from previous steps
+  #         docker pull ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64
+  #         docker pull ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64
+  #         docker manifest create ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64 ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64
+  #         docker manifest annotate ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-amd64 --arch amd64
+  #         docker manifest annotate ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }} ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}-arm64 --arch arm64
+  #         docker manifest push ${{ env.REPOSITORY }}:${{ env.TAG_SHASUM }}
