--- a/devops/infrastructure/build-arm64-playbook.yml
+++ b/devops/infrastructure/build-arm64-playbook.yml
@@ -25,8 +25,9 @@
             build:
               path: ./joystream
               dockerfile: joystream-node.Dockerfile
+              platform: linux/arm/v7
             name: '{{ repository }}'
-            tag: '{{ tag_name }}-arm64'
+            tag: '{{ tag_name }}-arm'
             push: yes
             source: build
           async: 3600
