Add another dockerfile, add armv7 workflow matrix

--- a/devops/infrastructure/build-arm64-playbook.yml
+++ b/devops/infrastructure/build-arm64-playbook.yml
@@ -24,10 +24,10 @@
           community.docker.docker_image:
             build:
               path: ./joystream
-              dockerfile: joystream-node.Dockerfile
-              platform: linux/arm/v7
+              dockerfile: '{{ dockerfile }}'
+              platform: '{{ platform }}'
             name: '{{ repository }}'
-            tag: '{{ tag_name }}-arm'
+            tag: '{{ tag_name }}'
             push: yes
             source: build
           async: 7200
