--- a/.github/workflows/joystream-node-docker.yml
+++ b/.github/workflows/joystream-node-docker.yml
@@ -59,8 +59,8 @@ jobs:
           tags: ${{ env.REPOSITORY }}:${{ steps.compute_shasum.outputs.shasum }}-amd64
         if: ${{ steps.compute_image_exists.outputs.image_exists == 1 }}
 
-  push-arm64:
-    name: Build joystream/node Docker image for arm64
+  push-arm:
+    name: Build joystream/node Docker image for arm
     runs-on: ubuntu-latest
     env:
       STACK_NAME: joystream-ga-docker-${{ github.run_number }}
@@ -153,8 +153,8 @@ jobs:
 
   push-manifest:
     name: Create manifest using both the arch images
-    if: ${{ needs.push-amd64.outputs.image_exists == 1 }} || ${{ needs.push-arm64.outputs.image_exists_arm == 1 }} || ${{ needs.push-arm64.outputs.image_exists_arm64 == 1 }}
-    needs: [push-amd64, push-arm64]
+    if: ${{ needs.push-amd64.outputs.image_exists == 1 }} || ${{ needs.push-arm.outputs.image_exists_arm == 1 }} || ${{ needs.push-arm.outputs.image_exists_arm64 == 1 }}
+    needs: [push-amd64, push-arm]
     runs-on: ubuntu-latest
     env:
       TAG_SHASUM: ${{ needs.push-amd64.outputs.tag_shasum }}
