--- a/.github/workflows/joystream-node-docker.yml
+++ b/.github/workflows/joystream-node-docker.yml
@@ -165,6 +165,7 @@ jobs:
           echo "${{ needs.push-amd64.outputs.image_exists }}"
           echo ${{ needs.push-arm.outputs.image_exists_arm }}
           echo ${{ needs.push-arm.outputs.image_exists_arm64 }}
+          echo ${{ needs.push-amd64.outputs.image_exists == 1 }} || ${{ needs.push-arm.outputs.image_exists_arm == 1 }} || ${{ needs.push-arm.outputs.image_exists_arm64 == 1 }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
