--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,6 +1,9 @@
-name: Main
+name: Create release
 
-on: push
+on:
+  push:
+    branches:
+      - create-release
 
 jobs:
   build:
@@ -14,6 +17,5 @@ jobs:
         run: cat Release.txt
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: Release.txt
