--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,6 @@
 name: Create release
 
-on:
-  push:
-    branches:
-      - create-release
+on: push
 
 jobs:
   build:
@@ -17,5 +14,6 @@ jobs:
         run: cat Release.txt
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: Release.txt
