--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -65,12 +65,7 @@ jobs:
         run: |
           export WORKSPACE_ROOT=`cargo metadata --offline --no-deps --format-version 1 | jq .workspace_root -r`
           echo $WORKSPACE_ROOT
-          ls -al .
-          ls -al $WORKSPACE_ROOT
-          pwd
-          echo ~/
-          sudo chown -R $(whoami) $WORKSPACE_ROOT
-          cargo clean
+          sudo chmod a+w $WORKSPACE_ROOT
           ./scripts/raspberry-cross-build.sh
 
       - name: Tar the binary
