--- a/.github/workflows/node-docker-arch.yml
+++ b/.github/workflows/node-docker-arch.yml
@@ -53,9 +53,10 @@ jobs:
             echo "deb [arch=arm64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
             apt-get update -y
             apt-get install -y docker-ce docker-ce-cli containerd.io
-            usermod -aG docker ubuntu
+            whoami
 
           run: |
+            whoami
             uname -a
             echo ::set-output name=uname::$(uname -a)
             ls -al .
