Add empty passphrase

--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -30,8 +30,8 @@ jobs:
           pulumi stack init dev
           ls -al .
         working-directory: devops/infrastructure/node-network
-        # env:
-        #   PULUMI_CONFIG_PASSPHRASE: not-a-secret
+        env:
+          PULUMI_CONFIG_PASSPHRASE:
 
       - uses: pulumi/actions@v3
         with:
@@ -43,4 +43,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'us-east-1'
-          # PULUMI_CONFIG_PASSPHRASE: not-a-secret
+          PULUMI_CONFIG_PASSPHRASE:
