--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Create local stack
         run: |
+          npm install
           pulumi login --local
           pulumi stack init dev
           ls -al .
