--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -26,10 +26,12 @@ jobs:
 
       - name: Create local stack
         run: |
+          cat Pulumi.dev.yaml
           npm install
           pulumi login --local
           pulumi stack init dev
           ls -al .
+          cat Pulumi.dev.yaml
         working-directory: devops/infrastructure/node-network
         env:
           PULUMI_CONFIG_PASSPHRASE:
