--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: '14.x'
 
+      - name: Start minikube
+        uses: medyagh/setup-minikube@master
+
       - name: Create local stack
         run: |
           npm install
