--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -24,8 +24,14 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Start minikube
-        uses: medyagh/setup-minikube@master
+      # - name: Start minikube
+      #   uses: medyagh/setup-minikube@master
+
+      - name: Setup Minikube
+        uses: manusa/actions-setup-minikube@v2.4.2
+        with:
+          minikube version: 'v1.21.0'
+          kubernetes version: 'v1.20.7'
 
       - name: Create local stack
         run: |
