--- a/.github/workflows/create-node-network-pulumi.yml
+++ b/.github/workflows/create-node-network-pulumi.yml
@@ -61,10 +61,10 @@ jobs:
 
       - name: Run kubectl commands
         run: |
+          pulumi stack output kubeconfig > kubeconfig.yml
+          export KUBECONFIG=$PWD/kubeconfig.yml
           kubectl config set-context --current --namespace=${{ steps.pulumi.outputs.namespaceName }}
           kubectl cp $(kubectl get pods | grep rpc-node | awk '{print $1}'):/chain-data/chain-data.7z ./chain-data.7z
-        env:
-          KUBECONFIG: ${{ steps.pulumi.outputs.kubeconfig }}
 
       - name: Get kubectl events for debugging
         if: always()
